--- a/src/Content.css
+++ b/src/Content.css
@@ -1,15 +1,63 @@
+.outer-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+}
+
 .container {
-  margin: 30px 300px;
-  padding: 10px 40px;
-  background-color: #fefefe;
-  border-radius: 15px;
+  display: grid;
+  width: 300px;
+  grid-template-columns: 1fr;
+  gap: 10px;
+  padding: 10px 0;
+  max-height: 71.7vh;
+  overflow-y: auto;
+}
+.container::-webkit-scrollbar {
+  width: 8px;
 }
 
-.container p {
-  color: #595456;
+.container::-webkit-scrollbar-track {
+  background: #f1f1f1;
+  border-radius: 10px;
 }
 
-.content-header {
-  text-align: center;
-  color: #03b57b;
+.container::-webkit-scrollbar-thumb {
+  background-color: #888;
+  border-radius: 10px;
+  border: 2px solid #f1f1f1;
+}
+
+.container::-webkit-scrollbar-thumb:hover {
+  background-color: #555;
+}
+
+.box {
+  border-radius: 10px;
+  background-color: #c7cac3;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.box p {
+  color: black;
+}
+
+.image {
+  width: 100%;
+  height: 300px;
+  object-fit: cover;
+}
+
+button {
+  margin-top: 10px;
+  padding: 5px 10px;
+  background-color: #2b2730;
+  color: white;
+  border: none;
+  cursor: pointer;
 }
