--- a/src/Header.css
+++ b/src/Header.css
@@ -10,6 +10,8 @@
   flex-direction: row;
   gap: 20px;
   list-style: none;
+  margin-left: 100px;
+  margin-right: 150px;
 }
 
 .nav-list a {
@@ -23,4 +25,9 @@
 }
 .nav-list.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
+}
+
+.profile a {
+  text-decoration: none;
+  color: inherit;
 }
