--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,6 +3,7 @@
   justify-content: center;
   align-items: center;
   background-color: #323232;
+  height: 83px;
 }
 
 .nav-list {
@@ -12,6 +13,12 @@
   list-style: none;
   margin-left: 100px;
   margin-right: 150px;
+}
+.logo a {
+  font-size: 24px;
+  font-weight: bold;
+  text-decoration: none;
+  color: #fefefefe;
 }
 
 .nav-list a {
