--- a/src/app/blog/Blog.css
+++ b/src/app/blog/Blog.css
@@ -16,10 +16,14 @@
   border-radius: 10px;
   border: 1px black solid;
 }
-.blog-list img {
+/* .blog-list img {
   width: 150px;
   height: 150px;
   margin-top: 25px;
   border: 1px solid black;
   border-radius: 10px;
+} */
+
+.Link {
+  color: rgb(247, 158, 50);
 }
