--- a/src/app/profile/Profile.css
+++ b/src/app/profile/Profile.css
@@ -1,14 +1,14 @@
-.profile-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
-  color: black;
+.profile-picture {
+  border-radius: 50%;
+  overflow: hidden; /* Ensures the image stays within the circle */
+  width: 150px;
+  height: 150px;
 }
 
 .profile-picture img {
-  width: 300px;
-  border-radius: 50%;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
 }
 
 .profile-inner-container {
@@ -18,4 +18,5 @@
   padding: 50px;
   background-color: #d8c3a5;
   border-radius: 30px;
+  gap: 40px;
 }
