Content page, header, footer - css update - ჰედერს და ფუტერს 10-10vh გავუწერე, მეინს 80 -> ეკრანის სიმაღლეზე დადგება ზომის მიუხედავად

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   background-color: #323232;
-  height: 83px;
+  height: 10vh;
 }
 
 .nav-list {
