--- a/src/app/content/Content.css
+++ b/src/app/content/Content.css
@@ -3,17 +3,19 @@
   justify-content: center;
   align-items: center;
   overflow: hidden;
+  height: 80vh;
 }
 
 .container {
   display: grid;
-  width: 300px;
-  grid-template-columns: 1fr;
+  width: 100%;
+  grid-template-columns: auto auto auto auto auto;
   gap: 10px;
-  padding: 10px 0;
-  max-height: 71.7vh;
+  padding: 0 3rem;
+  height: 80vh;
   overflow-y: auto;
 }
+
 .container::-webkit-scrollbar {
   width: 8px;
 }
