--- a/src/app/content/Content.css
+++ b/src/app/content/Content.css
@@ -11,7 +11,7 @@
   width: 100%;
   grid-template-columns: auto auto auto auto auto;
   gap: 10px;
-  padding: 0 3rem;
+  padding: 0 4rem;
   height: 80vh;
   overflow-y: auto;
 }
@@ -61,4 +61,18 @@ button {
   color: white;
   border: none;
   cursor: pointer;
+}
+
+@media screen and (max-width: 1200px) {
+  .container {
+    grid-template-columns: auto auto auto;
+    padding: 0 1rem;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .container {
+    grid-template-columns: auto;
+    padding: 0 0.5rem;
+  }
 }
