--- a/src/app/content/Content.css
+++ b/src/app/content/Content.css
@@ -10,7 +10,7 @@
   display: grid;
   width: 100%;
   grid-template-columns: auto auto auto auto auto;
-  gap: 10px;
+  gap: 0.5rem;
   padding: 0 4rem;
   height: 80vh;
   overflow-y: auto;
@@ -35,34 +35,6 @@
   background-color: #555;
 }
 
-.box {
-  border-radius: 10px;
-  padding: 10px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.box p {
-  color: black;
-}
-
-.image {
-  width: 100%;
-  height: 300px;
-  object-fit: cover;
-}
-
-button {
-  margin-top: 10px;
-  padding: 5px 10px;
-  background-color: #2b2730;
-  color: white;
-  border: none;
-  cursor: pointer;
-}
-
 @media screen and (max-width: 1200px) {
   .container {
     grid-template-columns: auto auto auto;
@@ -73,6 +45,5 @@ button {
 @media screen and (max-width: 600px) {
   .container {
     grid-template-columns: auto;
-    padding: 0 0.5rem;
   }
 }
