--- a/src/app/about/About.css
+++ b/src/app/about/About.css
@@ -1,19 +1,45 @@
 .about-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  color: black;
+  margin: 30px 0;
 }
-
 .about-inner-container {
-  width: 30%;
-  height: 358px;
   display: flex;
   flex-direction: column;
-  text-align: center;
   align-items: center;
-  padding: 40px;
-  margin: 40.2px 0;
+}
+.about-first-container > h1 {
+  text-align: center;
+  width: 415px;
+  font-size: 50px;
+  font-weight: 700;
+  display: inline-block;
+  margin-right: auto;
+  margin-bottom: 19px;
+  margin-left: auto;
+  margin-top: 20px;
+  padding: 21px;
+  border: 8px solid #fff;
+  color: #fff;
+  font-weight: 700;
+  letter-spacing: 8px;
+  text-shadow: none;
+}
+.sticks-and-middle {
+  display: flex;
+  gap: 30px;
+  align-items: center;
+  margin-top: 10px;
+}
+.sticks-and-middle > p {
+  font-size: 22px;
+  letter-spacing: 4px;
+  text-transform: uppercase;
+  font-weight: 200;
+  text-align: justify;
+  width: 415px;
+}
+.stick {
+  height: 1px;
+  width: 150px;
+  background-color: hsla(0, 0%, 100%, .36);
   border-radius: 10px;
-  background-color: #d8c3a5;
 }
