--- a/src/app/blog/[id]/PostDetail.css
+++ b/src/app/blog/[id]/PostDetail.css
@@ -3,8 +3,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  min-height: 100vh;
-  color: #000000;
+  min-height: 75vh;
 }
 
 .post-container {
@@ -13,9 +12,7 @@
   align-items: center;
   flex-direction: column;
   padding: 40px;
-  background-color: #f8edce;
-  border: 1px solid #ddd;
-  border-radius: 10px;
+  border: 8px solid white;
   max-width: 800px;
   margin: 0 auto;
 }
@@ -23,7 +20,7 @@
 .post-title {
   font-size: 36px;
   font-weight: bold;
-  color: #f79e32;
+  color: blacks;
   margin-bottom: 20px;
   text-align: center;
 }
@@ -31,7 +28,6 @@
 .post-body {
   font-size: 18px;
   line-height: 1.6;
-  color: #333;
   text-align: justify;
 }
 
