--- a/src/app/blog/Blog.css
+++ b/src/app/blog/Blog.css
@@ -3,9 +3,11 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  min-height: 100vh;
+  height: 80vh;
   color: white;
- 
+  background-color: black;
+  overflow: auto;
+  padding-top: 150px;
 }
 
 .blog-list {
@@ -30,4 +32,22 @@ p {
 .Link:hover {
   background-color: white;
   color: black;
+}
+.blog-container::-webkit-scrollbar {
+  width: 8px;
+}
+
+.blog-container::-webkit-scrollbar-track {
+  background: #f1f1f1;
+  border-radius: 10px;
+}
+
+.blog-container::-webkit-scrollbar-thumb {
+  background-color: #888;
+  border-radius: 10px;
+  border: 2px solid #f1f1f1;
+}
+
+.blog-container::-webkit-scrollbar-thumb:hover {
+  background-color: #555;
 }
