--- a/src/app/profile/Profile.css
+++ b/src/app/profile/Profile.css
@@ -1,22 +1,66 @@
-.profile-picture {
+.profile-container {
+  max-width: 400px;
+  height: 450px;
+  margin: 0 auto;
+  padding: 20px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  margin-top: 50px;
+  border: 3px solid white;
+}
+
+.profile-header {
+  margin-bottom: 20px;
+}
+.profile-header > h1 {
+  padding-top: 20px;
+}
+.profile-header > p {
+  padding-top: 20px;
+}
+.avatar {
+  width: 100px;
+  height: 100px;
   border-radius: 50%;
-  overflow: hidden; /* Ensures the image stays within the circle */
-  width: 150px;
-  height: 150px;
-}
-
-.profile-picture img {
+  border: 3px solid #ffffff;
+  margin-bottom: 10px;
   object-fit: cover;
-  width: 100%;
-  height: 100%;
+  margin-top: 20px;
 }
 
-.profile-inner-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 50px;
-  background-color: #d8c3a5;
-  border-radius: 30px;
-  gap: 40px;
+.profile-name {
+  font-size: 24px;
+  font-weight: 600;
+  color: white;
+}
+
+.profile-bio {
+  font-size: 16px;
+  color: white;
+  margin: 5px 0;
+}
+
+.profile-location,
+.profile-email {
+  font-size: 14px;
+  color: white;
+}
+
+.social-links {
+  margin-top: 35px;
+}
+
+.social-links a {
+  margin: 0 10px;
+  padding: 10px 15px;
+  background-color: black;
+  border: 1px solid white;
+  color: white;
+  text-decoration: none;
+  transition: background-color 0.3s ease;
+}
+
+.social-links a:hover {
+  background-color: white;
+  color: black;
 }
