--- a/src/components/Cards/Cards.css
+++ b/src/components/Cards/Cards.css
@@ -3,6 +3,7 @@
     display: flex;
     flex-direction: column;
     margin: 1rem 0;
+    
   }
   
   .productcard-image-wrapper {
@@ -14,6 +15,8 @@
     height: 200px;
     width: 100%;
     border-radius: 20% 0 0 0;
+    border: 3px solid white;
+    border-bottom: 0;
   }
   
   .productcard-content-wrapper {
@@ -28,13 +31,15 @@
     color: #fff;
     background-color: #333;
     border-radius: 0 0 20% 0;
+    border: 3px solid white;
+    border-top: 0;
   }
   
   .product-image {
     width: 100%;
     height: 100%;
     object-fit: contain;
-    background-color: #fff;
+    background-color: black;
   }
   
   .product-button {
