--- a/src/components/Loading/Loading.css
+++ b/src/components/Loading/Loading.css
@@ -4,13 +4,17 @@
   align-items: center;
   justify-content: center;
   min-height: 80vh;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%); 
 }
 
 .spinner {
   width: 50px;
   height: 50px;
   border: 5px solid rgba(0, 0, 0, 0.1);
-  border-top: 5px solid rgb(247, 158, 50);
+  border-top: 5px solid white;
   border-radius: 50%;
   animation: spin 1s linear infinite;
 }
@@ -27,5 +31,5 @@
 .loading-container p {
   margin-top: 20px;
   font-size: 18px;
-  color: rgb(247, 158, 50);
+  color: white;
 }
