--- a/src/app/page.css
+++ b/src/app/page.css
@@ -1,9 +1,10 @@
 .main-page-container {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
   width: 100%;
-  margin: 70px 0;
+  height: 80vh;
 }
 
 .main-top-content > h1 {
@@ -23,6 +24,7 @@
   letter-spacing: 8px;
   text-shadow: none;
 }
+
 .main-page-container > h2 {
   padding-bottom: 67px;
   font-family: "Roboto Condensed", sans-serif;
