--- a/src/app/content/Content.css
+++ b/src/app/content/Content.css
@@ -54,6 +54,16 @@
   background-color: #555;
 }
 
+.component-container {
+  width: 100%;
+  height: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  background-color: #444040;
+}
+
 @media screen and (max-width: 1200px) {
   .container {
     grid-template-columns: auto auto auto;
