--- a/src/app/(authorized)/blog/Blog.css
+++ b/src/app/(authorized)/blog/Blog.css
@@ -1,53 +1,8 @@
-.blog-container {
+.Blog {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  height: 80vh;
-  color: white;
-  background-color: black;
-  overflow: auto;
-  padding-top: 150px;
-}
-
-.blog-list {
-  max-width: 700px;
-  display: flex;
-  margin: 30px;
-  padding: 50px;
-  gap: 50px;
-  border: 8px solid white;
-}
-
-p {
-  padding-top: 20px;
-  padding-bottom: 20px;
-}
-.Link {
-  border: 1px solid white;
-  padding: 5px;
-  color: white;
-  transition: .3s;
-}
-.Link:hover {
-  background-color: white;
-  color: black;
-}
-.blog-container::-webkit-scrollbar {
-  width: 8px;
-}
-
-.blog-container::-webkit-scrollbar-track {
-  background: #f1f1f1;
-  border-radius: 10px;
-}
-
-.blog-container::-webkit-scrollbar-thumb {
-  background-color: #888;
-  border-radius: 10px;
-  border: 2px solid #f1f1f1;
-}
-
-.blog-container::-webkit-scrollbar-thumb:hover {
-  background-color: #555;
+  align-items: center;
+  background: url("../../../../public/assets/253109.jpg") center;
+  margin: 0 auto;
+  margin-top: 50px;
 }
