--- a/src/app/(authorized)/globals.css
+++ b/src/app/(authorized)/globals.css
@@ -1,29 +1,62 @@
-* {
+*,
+html,
+body {
   margin: 0;
   padding: 0;
+  border: 0;
+  font: inherit;
+  font-size: 10px;
   box-sizing: border-box;
+  line-height: 1.5;
+  font-family: sans-serif;
 }
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+body {
+  background-repeat: repeat;
+  background-size: 100px 100px;
+  background-color: black;
+}
+
+ol,
+ul {
+  list-style: none;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+@media (max-width: 800px) {
+  html {
+    font-size: 8px;
+  }
+}
+@media (max-width: 500px) {
+  html {
+    font-size: 6px;
   }
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
+@media (max-height: 500px) {
+  html {
+    font-size: 5px;
+  }
 }
-main {
-  flex: 1;
+
+@media (max-height: 400px) {
+  html {
+    font-size: 4px;
+  }
 }
-a {
-  color: inherit;
-  text-decoration: none;
+
+@media (max-height: 300px) {
+  html {
+    font-size: 2.5px;
+  }
+}
+
+@media (max-height: 250px) {
+  html {
+    font-size: 2px;
+  }
 }
