--- a/src/app/(authorized)/products/Content.css
+++ b/src/app/(authorized)/products/Content.css
@@ -2,12 +2,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background: url("../../../../public/assets/1280417267661803541.webp") repeat center ;
-background-size: cover;
+  background: url("../../../../public/assets/1280417267661803541.webp")  center ;
+  background-size: cover;
   background-color: black;
   background-size: contain;
   color: white;
   text-align: center;
-  padding-top: 100px;
-  padding-bottom: 50px;
+
 }
