production-თვის ერორების ცასწორება

--- a/src/app/blog/[id]/PostDetail.css
+++ b/src/app/blog/[id]/PostDetail.css
@@ -4,7 +4,7 @@
   align-items: center;
   justify-content: center;
   min-height: 75vh;
-  background: url("../../../../../public/assets/253109.jpg") center;
+  background: url("../../../../public/assets/1280417267661803541.webp") center;
 }
 
 .post-container {
