--- a/src/app/products/Content.css
+++ b/src/app/products/Content.css
@@ -2,11 +2,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background: url("../../../../public/assets/1280417267661803541.webp")  center ;
+  background: url("../../../public/assets/kadi.jpg") center;
   background-size: cover;
   background-color: black;
   background-size: contain;
   color: white;
   text-align: center;
-
 }
